@@ -38,8 +38,11 @@ extern MagickExport MagickBooleanType
   SetImageDepth(Image *,const size_t,ExceptionInfo *),
   SetImageType(Image *,const ImageType,ExceptionInfo *);
 
+extern MagickExport PointInfo
+  *GetImageConvexHull(const Image *,size_t *,ExceptionInfo *);
+
 extern MagickExport RectangleInfo
-  GetImageBoundingBox(const Image *,ExceptionInfo *exception);
+  GetImageBoundingBox(const Image *,ExceptionInfo *);
 
 extern MagickExport size_t
   GetImageDepth(const Image *,ExceptionInfo *),
